--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -172,9 +172,9 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime 7.8.0
-          haxelib install openfl 9.0.2
-          haxelib install flixel 4.8.1
+          haxelib install lime
+          haxelib install openfl
+          haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
